# SkyMarket

./: README.md  pyproject.toml
SkyMarket/ads/: models.py  serializers.py  urls.py
SkyMarket/ads/migrations/: 0001_initial.py  0002_alter_ad_created_at_alter_ad_description_and_more.py  0003_alter_ad_description.py  0004_alter_ad_description.py  0005_alter_ad_description.py  0006_alter_ad_description.py  0007_alter_ad_description.py
SkyMarket/ads/views/: ad.py  comment.py
SkyMarket/skymarket/: settings.py  urls.py
SkyMarket/users/: managers.py  models.py  serializers.py  urls.py
SkyMarket/users/management/commands/: loadall.py
SkyMarket/users/migrations/: 0001_initial.py  0002_alter_user_image.py
